Updated the product cards to display dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <template id="product-card-template">
+      <li class="product-card">
+        <a href="product_pages/product-details.html?product=">
+        <img
+          src=""
+          alt="Image of "
+        />
+        <h3 class="card__brand"></h3>
+        <h2 class="card__name"></h2>
+        <p class="product-card__price">$</p></a>
+      </li>
+    </template>
+    <script src="js/main.js" type="module"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Home</title>
@@ -63,7 +76,8 @@
       </section>
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list">
+        <ul class="product-list"></ul>
+          <!--
           <li class="product-card">
             <a href="product_pages/product-details.html?product=880RR">
               <img
@@ -109,6 +123,7 @@
             >
           </li>
         </ul>
+      -->
       </section>
     </main>
     <footer>&copy;NOT a real business</footer>
