--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | North Face Talus 4-person tent</title>
     <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/product.js" defer></script>
+    <script src="../js/product.js" type="module"></script>
   </head>
   <body>
     <header class="divider">
@@ -60,7 +60,7 @@
           easy to pitch design.
         </p>
         <div class="product-detail__add">
-          <button id="addToCart" data-id="985RF">Add to Cart</button>
+          <button id="addToCart" data-id="989CG">Add to Cart</button>
         </div>
       </section>
     </main>
