--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -13,6 +13,8 @@
       <section class="products">
         <h2>My Cart</h2>
         <ul class="product-list"></ul>
+        <div class="cart-footer hide"><p class="cart-total">Total: </p></div>
+        <a href="../checkout/index.html">Checkout</a>
       </section>
     </main>
     <footer id="main-footer"></footer>
