--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -20,7 +20,7 @@
             <label>Street <input type="text" name="street" required></label>
             <label>City <input type="text" name="city" required></label>
             <label>State <input type="text" name="state" required></label>
-            <label>Zip <input type="text" name="zip" required></label>
+            <label>Zip <input type="text" name="zip" id="zip" required></label>
           </fieldset>
           <fieldset>
             <legend>Payment</legend>
@@ -39,7 +39,7 @@
             <label><strong>Order Total</strong></label>
             <label class="grid-right" id="summaryTotal">adsf</label>
           </fieldset>
-          <button>Checkout</button>
+          <button id="checkoutSubmit">Checkout</button>
         </form>
       </section>
     </main>
