Added the html stuff for the checkout page; nicely enough, the css is already set up for it!

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -12,6 +12,61 @@
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
+        <form>
+          <fieldset>
+            <legend>Shipping</legend>
+            <br />
+            <label>
+              First Name<br />
+              <input type="text" required aria-required="true" /><br
+            /></label>
+            <label>
+              Last Name<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              Street<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              City<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              State<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              Zip<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend>Payment</legend>
+            <br />
+            <label>
+              Card Number<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              Expiration<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+            <label>
+              Security Code<br />
+              <input type="text" required aria-required="true" /><br />
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend>Order Summary</legend>
+            <br />
+            <p>Item Subtotal<br /></p>
+            <p>Shipping Estimate<br /></p>
+            <p>Tax<br /></p>
+            <p><b>Order Total</b></p>
+          </fieldset>
+          <button type="submit">Checkout</button>
+        </form>
       </section>
     </main>
     <footer id="main-footer"></footer>
