--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -12,7 +12,7 @@
     <main class="divider">
       <section class="products">
         <h2 class="formTitle">Review & Place your Order</h2>
-        <form id="checkoutForm" method="get" action="thankyou.html">
+        <form id="checkoutForm" method="get" action="checkedout.html">
           <fieldset>
             <legend>Shipping</legend>
             <label>First Name <input type="text" name="fname" required></label>
